Fix glitch when scrolling on mobile

--- a/app/assets/stylesheets/scss/components/_particles.scss
+++ b/app/assets/stylesheets/scss/components/_particles.scss
@@ -1,6 +1,7 @@
 .c-particles {
   top:0;
   left: 0;
+  bottom: 0;
   z-index: -1;
   background: #1e5799;
   background: -webkit-linear-gradient(-45deg, #1e5799 0%,#47325f 50%,#68345e 100%);
